# streamly-statistics

./: .gitignore  .packcheck.ignore  CHANGELOG.md  NOTICE  README.md  appveyor.yml  cabal.project  cabal.project.Werror  cabal.project.ci  default.nix  stack.yaml  streamly-statistics.cabal
.github/workflows/: haskell.yml
benchmark/: Main.hs
src/Streamly/: Statistics.hs
src/Streamly/Statistics/: Scanl.hs
test/: Main.hs
