cabal-version:       2.4
name:                streamly-statistics
version:             0.1.0.0
synopsis: Modular statistics on potentially infinite streams.
description: 
  Use streamly folds to collect statistics on infinite streams in a
  composable manner.
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author: Composewell Technologies
maintainer: streamly@composewell.com
copyright: 2019 Composewell Technologies
-- category:
extra-source-files:  CHANGELOG.md

flag use-gauge
  description: Use gauge instead of tasty-bench for benchmarking
  manual: True
  default: False

library
  exposed-modules:     Streamly.Statistics
  other-modules:       
  build-depends:       base     >= 4.9 && < 5
                     , streamly == 0.8.1.1
                     , deque    >= 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2
               -fspec-constr-recursive=16
               -fmax-worker-args=16

test-suite test
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  build-depends:      streamly-statistics
                    , streamly       == 0.8.1.1
                    , base           >= 4.9   && < 5
                    , QuickCheck     >= 2.10  && < 2.15
                    , hspec          >= 2.0   && < 3
                    , random         >= 1.0.0 && < 2
  default-language:   Haskell2010

benchmark benchmark
  build-depends:      streamly-statistics
                    , streamly       == 0.8.1.1
                    , base           >= 4.9   && < 5
                    , random         >= 1.0.0 && < 2

  if flag(use-gauge)
    build-depends:  gauge >= 0.2.4 && < 0.3
  else
    build-depends:    tasty-bench >= 0.3 && < 0.4
                    , tasty     >= 1.4.1 && < 1.5
    mixins: tasty-bench
      (Test.Tasty.Bench as Gauge
      , Test.Tasty.Bench as Gauge.Main
      )

  ghc-options: -O2
               -fspec-constr-recursive=16
               -fmax-worker-args=16
  type: exitcode-stdio-1.0
  hs-source-dirs:   benchmark
  main-is:          Main.hs
  default-language: Haskell2010
